tests/models/enum/unnamed/i32/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        i32
    ),
}
fn main() {}
