tests/models/enum/unnamed/i32/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/i32/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |         i32
7 | |     ),
  | |_____^
